--- a/PierresTasties/Views/ExampleModels/Index.cshtml
+++ b/PierresTasties/Views/ExampleModels/Index.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "ExampleModel Page";
+    ViewData["Title"] = "Flavor Page";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -10,7 +10,7 @@
 }
 
 <ul>
-    @foreach (ExampleModel exampleModel in Model)
+    @foreach (Flavor exampleModel in Model)
     {
 			<li>@exampleModel.Name</li>
     }
