--- a/PierresTasties/Views/Shared/_Layout.cshtml
+++ b/PierresTasties/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PierresTasties</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">PierresTasties</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,20 +20,34 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Flavors" asp-action="Index">List</a>
+                            <a class="nav-link text-dark" asp-controller="Flavors" asp-action="Index">Flavor List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Flavors" asp-action="Details" asp-route-id="1">Details</a>
+                            <a class="nav-link text-dark" asp-controller="Flavors" asp-action="Details" asp-route-id="1">Flavor 1 Details</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Flavors" asp-action="Create">New</a>
+                            <a class="nav-link text-dark" asp-controller="Flavors" asp-action="Create">New Flavor</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Flavors" asp-action="Edit" asp-route-id="1">Edit</a>
+                            <a class="nav-link text-dark" asp-controller="Flavors" asp-action="Edit" asp-route-id="1">Flavor 1 Edit</a>
                         </li>
+                        <li class="nav-item"><p class="nav-link text-dark">||</p></li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Treats" asp-action="Index">Treat List</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Treats" asp-action="Details" asp-route-id="1">Treat 1 Details</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Treats" asp-action="Create">New Treat</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Treats" asp-action="Edit" asp-route-id="1">Treat 1 Edit</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
