added clickable emojis to see details, edit, and delete

--- a/PierresTasties/Views/Flavors/Details.cshtml
+++ b/PierresTasties/Views/Flavors/Details.cshtml
@@ -2,5 +2,9 @@
     ViewData["Title"] = $"{@Model.Name} Details";
 }
 
-<h1>Details for @Model.Name</h1>
+<h1>
+    Details for @Model.Name
+    <a href="/flavors/edit/@Model.FlavorId">✏️</a>
+    <a href="#" data-id="@Model.FlavorId" data-url="/flavors/delete/@Model.FlavorId" class="delete-link">❌</a>
+</h1>
 
