--- a/PierresTasties/Views/Flavors/Index.cshtml
+++ b/PierresTasties/Views/Flavors/Index.cshtml
@@ -12,6 +12,11 @@
 <ul>
     @foreach (Flavor flavor in Model)
     {
-			<li>@flavor.Name</li>
+			<li>
+                @flavor.Name
+                <a href="/flavors/details/@flavor.FlavorId">🔎</a>
+                <a href="/flavors/edit/@flavor.FlavorId">✏️</a>
+                <a href="#" data-id="@flavor.FlavorId" data-url="/flavors/delete/@flavor.FlavorId" class="delete-link">❌</a>
+            </li>
     }
 </ul>
