added delete route for Flavor and Treat

--- a/PierresTasties/Views/Treats/Details.cshtml
+++ b/PierresTasties/Views/Treats/Details.cshtml
@@ -4,7 +4,7 @@
 
 <h1>
     Details for @Model.Name
-    <a href="/treats/edit/@Model.TreatsId">✏️</a>
-    <a href="#" data-id="@Model.TreatsId" data-url="/treats/delete/@Model.TreatsId" class="delete-link">❌</a>
+    <a href="/treats/edit/@Model.TreatId">✏️</a>
+    <a href="#" data-id="@Model.TreatId" data-url="/treats/delete/@Model.TreatId" class="delete-link">❌</a>
 </h1>
 
