--- a/PierresTasties/Views/Shared/_Layout.cshtml
+++ b/PierresTasties/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1 site-nav">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -47,6 +47,25 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Treats" asp-action="Edit" asp-route-id="1">Treat 1 Edit</a>
                         </li>
+                    </ul>
+                    <ul class="navbar-nav flex-grow-1 user-nav">
+                        @if (User.Identity.IsAuthenticated) 
+                        {
+                            var email = User.FindFirstValue(ClaimTypes.Email);
+                            <li class="nav-item"><p class="nav-link text-dark">@email</p></li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Log Out</a>
+                            </li>
+                        } 
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Register">Sign up</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Log in</a>
+                            </li>
+                        }
 
                     </ul>
                 </div>
