--- a/PierresTasties/Views/_ViewImports.cshtml
+++ b/PierresTasties/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using PierresTasties
 @using PierresTasties.Models
+@using PierresTasties.ViewModels
+@using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
