--- a/PierresTasties/Views/Treats/Details.cshtml
+++ b/PierresTasties/Views/Treats/Details.cshtml
@@ -4,7 +4,10 @@
 
 <h1>
     Details for @Model.Name
-    <a href="/treats/edit/@Model.TreatId">✏️</a>
-    <a href="#" data-id="@Model.TreatId" data-url="/treats/delete/@Model.TreatId" class="delete-link">❌</a>
+    @if ((bool)ViewData["IsAdmin"])
+    {
+        <a href="/treats/edit/@Model.TreatId">✏️</a>
+        <a href="#" data-id="@Model.TreatId" data-url="/treats/delete/@Model.TreatId" class="delete-link">❌</a>
+    }
 </h1>
 
