--- a/PierresTasties/Views/Treats/Index.cshtml
+++ b/PierresTasties/Views/Treats/Index.cshtml
@@ -15,9 +15,12 @@
 			<li>
                 @treat.Name
                 <a href="/treats/details/@treat.TreatId">🔎</a>
-                <a href="/treats/edit/@treat.TreatId">✏️</a>
-                <a href="#" data-id="@treat.TreatId" data-url="/treats/delete/@treat.TreatId" class="delete-link">❌</a>
-
+                
+                @if ((bool)ViewData["IsAdmin"])
+                {
+                    <a href="/treats/edit/@treat.TreatId">✏️</a>
+                    <a href="#" data-id="@treat.TreatId" data-url="/treats/delete/@treat.TreatId" class="delete-link">❌</a>
+                }
             </li>
     }
 </ul>
