--- a/PierresTasties/Views/_ViewImports.cshtml
+++ b/PierresTasties/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using PierresTasties
 @using PierresTasties.Models
 @using PierresTasties.ViewModels
-@using System.Security.Claims
+@using System.Security.Claims @* Used in _Layout.cshtml *@
+@using Microsoft.AspNetCore.Identity @* Used in _ViewStart.cshtml *@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
