treat detail page shows image and vote count

--- a/PierresTasties/Views/Flavors/Details.cshtml
+++ b/PierresTasties/Views/Flavors/Details.cshtml
@@ -1,4 +1,5 @@
 @{
+    // FLAVOR DETAIL PAGE
     ViewData["Title"] = $"{@Model.Name} Details";  
 }
 
@@ -12,4 +13,5 @@
         <a href="#" data-id="@Model.FlavorId" data-url="/flavors/delete/@Model.FlavorId" class="delete-link">❌</a>
     }
 </h1>
+
 
