--- a/PierresTasties/Views/Treats/Details.cshtml
+++ b/PierresTasties/Views/Treats/Details.cshtml
@@ -3,11 +3,12 @@
     ViewData["Title"] = $"{@Model.Name} Details";
 }
 
-<p>Count: @Model.FlavorTreats.Count</p>
-<div class="flavor-btns">
+<div class="flavor-btn-container">
     @foreach(FlavorTreat flavorTreat in Model.FlavorTreats)
     {
-        <button class="btn w-50 btn-block @flavorTreat.Flavor.Name">@flavorTreat.Flavor.Name</button>
+        <button class="btn w-50 btn-inline @flavorTreat.Flavor.Name">
+            <a href="/flavors/details/@flavorTreat.Flavor.FlavorId" class="flavor-link">@flavorTreat.Flavor.Name</a>
+        </button>
     }
 </div>
 
