--- a/PierresTasties/Views/Home/Index.cshtml
+++ b/PierresTasties/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to PierresTasties</h1>
+    <h1 class="display-4">Pierre's Tasties</h1>
 </div>
