--- a/PierresTasties/Views/Treats/Details.cshtml
+++ b/PierresTasties/Views/Treats/Details.cshtml
@@ -6,9 +6,10 @@
 <div class="flavor-btn-container">
     @foreach(FlavorTreat flavorTreat in Model.FlavorTreats)
     {
-        <button class="btn w-50 btn-inline @flavorTreat.Flavor.Name">
-            <a href="/flavors/details/@flavorTreat.Flavor.FlavorId" class="flavor-link">@flavorTreat.Flavor.Name</a>
-        </button>
+        <a href="/flavors/details/@flavorTreat.Flavor.FlavorId" 
+        class="btn w-50 flavor-link @flavorTreat.Flavor.Name">
+                @flavorTreat.Flavor.Name
+        </a>
     }
 </div>
 
