--- a/PierresTasties/Views/Treats/Form.cshtml
+++ b/PierresTasties/Views/Treats/Form.cshtml
@@ -22,6 +22,29 @@
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
+    @* Description *@
+    <div class="form-group">   
+        <label asp-for="Description" class="control-label">Description: </label>
+        <input asp-for="Description" class="form-control" />
+        <span asp-validation-for="Description" class="text-danger"></span>
+    </div>
+
+    @* Flavor 1 *@
+    <div class="form-group">
+        <label for="flavorId1" class="control-label">Flavor 1: </label>
+        <select name="flavorId1" class ="form-control" asp-items="ViewBag.Flavors" required>
+            <option value="">-- Select Flavor --</option>
+        </select>
+    </div>
+
+    @* Flavor 2 *@
+    <div class="form-group">
+        <label for="flavorId2" class="control-label">Flavor 2: </label>
+        <select name="flavorId2" class ="form-control" asp-items="ViewBag.Flavors">
+            <option value="">-- Select Flavor --</option>
+        </select>
+    </div>
+
     <div class="form-group">
         <input type="submit" value="@ViewData["SubmitButton"]" class="btn btn-primary" />
     </div>
