--- a/PierresTasties/Views/Flavors/Form.cshtml
+++ b/PierresTasties/Views/Flavors/Form.cshtml
@@ -6,7 +6,7 @@
 
 <h3>@ViewData["Title"]</h3>
 
-<form asp-action="@ViewData["FormAction"]" asp-controller="Flavors" method="post">
+<form asp-action="@ViewBag.FormAction" asp-controller="Flavors" method="post">
     @Html.AntiForgeryToken()
 
     @* IF form is being used to edit, then attach the Id to model. *@
@@ -23,7 +23,7 @@
     </div>
 
     <div class="form-group">
-        <input type="submit" value="@ViewData["SubmitButton"]" class="btn btn-primary" />
+        <input type="submit" value="@ViewBag.SubmitButton" class="btn btn-primary" />
     </div>
 </form>
 
