--- a/PierresTasties/Views/Flavors/Index.cshtml
+++ b/PierresTasties/Views/Flavors/Index.cshtml
@@ -16,7 +16,7 @@
                 @flavor.Name
                 <a href="/flavors/details/@flavor.FlavorId">🔎</a>
                 
-                @if ((bool)ViewData["IsAdmin"])
+                @if (ViewBag.isAdmin)
                 {
                     <a href="/flavors/edit/@flavor.FlavorId">✏️</a>
                     <a href="#" data-id="@flavor.FlavorId" data-url="/flavors/delete/@flavor.FlavorId" class="delete-link">❌</a>
