--- a/PierresTasties/Views/Flavors/Index.cshtml
+++ b/PierresTasties/Views/Flavors/Index.cshtml
@@ -14,12 +14,18 @@
     {
 			<li>
                 @flavor.Name
-                <a href="/flavors/details/@flavor.FlavorId">🔎</a>
+                <a href="/flavors/details/@flavor.FlavorId" title="Details">🔎</a>
                 
                 @if (ViewBag.isAdmin)
                 {
-                    <a href="/flavors/edit/@flavor.FlavorId">✏️</a>
-                    <a href="#" data-id="@flavor.FlavorId" data-url="/flavors/delete/@flavor.FlavorId" class="delete-link">❌</a>
+                    <a href="/flavors/edit/@flavor.FlavorId" title="Edit">✏️</a>
+                    <a 
+                        href="#" 
+                        data-id="@flavor.FlavorId" 
+                        data-url="/flavors/delete/@flavor.FlavorId" 
+                        class="delete-link"
+                        title="Delete"
+                    >❌</a>
                 }
             </li>
     }
