--- a/PierresTasties/Views/Treats/Form.cshtml
+++ b/PierresTasties/Views/Treats/Form.cshtml
@@ -6,7 +6,7 @@
 
 <h3>@ViewData["Title"]</h3>
 
-<form asp-action="@ViewData["FormAction"]" asp-controller="Treats" method="post">
+<form asp-action="@ViewBag.FormAction" asp-controller="Treats" method="post">
     @Html.AntiForgeryToken()
 
     @* IF form is being used to edit, then attach the Id to model. *@
@@ -29,7 +29,7 @@
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
-    @* Flavor 1 *@
+    @* Flavor 1 (required) *@
     <div class="form-group">
         <label for="flavorId1" class="control-label">Flavor 1: </label>
         <select name="flavorId1" class="form-control" required>
@@ -48,7 +48,7 @@
         </select>
     </div>
 
-    @* Flavor 2 *@
+    @* Flavor 2 (not required) *@
     <div class="form-group">
         <label for="flavorId2" class="control-label">Flavor 2: </label>
         <select name="flavorId2" class="form-control">
@@ -69,7 +69,7 @@
 
 
     <div class="form-group">
-        <input type="submit" value="@ViewData["SubmitButton"]" class="btn btn-primary" />
+        <input type="submit" value="@ViewBag.SubmitButton" class="btn btn-primary" />
     </div>
 </form>
 
