--- a/PierresTasties/Views/Treats/Index.cshtml
+++ b/PierresTasties/Views/Treats/Index.cshtml
@@ -14,12 +14,18 @@
     {
 			<li>
                 @treat.Name
-                <a href="/treats/details/@treat.TreatId">🔎</a>
+                <a href="/treats/details/@treat.TreatId" title="Details">🔎</a>
                 
                 @if (ViewBag.isAdmin)
                 {
-                    <a href="/treats/edit/@treat.TreatId">✏️</a>
-                    <a href="#" data-id="@treat.TreatId" data-url="/treats/delete/@treat.TreatId" class="delete-link">❌</a>
+                    <a href="/treats/edit/@treat.TreatId" title="Edit">✏️</a>
+                    <a 
+                        href="#" 
+                        data-id="@treat.TreatId" 
+                        data-url="/treats/delete/@treat.TreatId" 
+                        class="delete-link" 
+                        title="Delete"
+                    >❌</a>
                 }
             </li>
     }
