fixed weird footer spacing

--- a/PierresTasties/Views/Shared/_Layout.cshtml
+++ b/PierresTasties/Views/Shared/_Layout.cshtml
@@ -13,20 +13,16 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-controller="Home" asp-action="Index">Pierre's Tasties</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1 site-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="btn btn-link nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Flavors" asp-action="Index">Flavor List</a>
+                            <a class="btn btn-link nav-link text-dark" asp-controller="Flavors" asp-action="Index">Flavor List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Treats" asp-action="Index">Treat List</a>
+                            <a class="btn btn-link nav-link text-dark" asp-controller="Treats" asp-action="Index">Treat List</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav flex-grow-1 user-nav">
@@ -34,7 +30,7 @@
                         {
                             var email = User.FindFirstValue(ClaimTypes.Email);
                             <li class="nav-item">
-                                <p class="nav-link text-dark">@email</p>
+                                <p class="nav-link text-dark">@email || </p>
                             </li>
                             <li class="nav-item">
                                 <form asp-controller="Account" asp-action="LogOff" method="post" style="display: inline;">
@@ -61,31 +57,36 @@
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted">      
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <footer class="border-top footer text-muted">
+    @* <footer class="border-top footer text-muted"> *@
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white">
             <div class="container-fluid">
-                <div class="container">
-                    &copy; 2023 - Pierre's Tasties - Designed by <a href="https://www.linkedin.com/in/austinpapritz">Austin Papritz</a>
-                </div>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    @if(ViewBag.isAdmin)
-                    {
-                        <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                            <ul class="navbar-nav flex-grow-1 site-nav">
-                                <li class="nav-link text-dark">Admin Navigation: </li>
-                                <li class="nav-item">
-                                    <a class="btn btn-link nav-link text-dark" asp-controller="Flavors" asp-action="Create">New Flavor</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="btn btn-link nav-link text-dark" asp-controller="Treats" asp-action="Create">New Treat</a>
-                                </li>
-                            </ul>
-                        </div>
-                    }
+                    <ul class="navbar-nav flex-grow-1 site-nav">
+                        <li class="nav-item">
+                            <p>
+                                &copy; 2023 - Pierre's Tasties - Designed by 
+                                <a href="https://www.linkedin.com/in/austinpapritz">Austin Papritz</a>
+                            </p>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav footer-nav">
+                        @if(ViewBag.isAdmin)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark">Admin Navigation || </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-link nav-link text-dark" asp-controller="Flavors" asp-action="Create">New Flavor</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-link nav-link text-dark" asp-controller="Treats" asp-action="Create">New Treat</a>
+                            </li>
+                        }
+                    </ul>
                 </div>
             </div>
-        </nav>
+        </nav>      
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
