complete README with screenshot

--- a/PierresTasties/Views/Treats/Details.cshtml
+++ b/PierresTasties/Views/Treats/Details.cshtml
@@ -41,7 +41,7 @@
         class="btn btn-success w-5 btn-block vote-count" 
         title="Use a Tasty Token"
     > 
-        🪙 @Model.Votes.Count
+        🗳️ @Model.Votes.Count
     </button>
 </div>
 
