--- a/PierresTasties/Views/Shared/_Layout.cshtml
+++ b/PierresTasties/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PierresTasties.styles.css" asp-append-version="true" />
+    <link rel="icon" type="image/svg+xml" href="/bread.svg">
 </head>
 <body>
     <header>
